# Uni.HAL.Example.STM32H7

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: corejson.cmake  cpm-mbedtls-config.h  cpm-mbedtls.cmake
dbg/: ST_STM32H743_TraceBufferconfig.pex  gcc_debug_nucleo.jdebug
src_app/: CMakeLists.txt  app.c  app_fwinfo.c.in  app_handlers.c  app_hash.c  app_key.c  app_linker.ld  fwinfo_generator.cmake  inject_hash.py
src_assets/: CMakeLists.txt  dashboard.html  index.html  updater.html
src_lib/: CMakeLists.txt
src_lib/config/: app_config.h  app_config_adc.c  app_config_adc.h  app_config_crypto.c  app_config_crypto.h  app_config_net.c  app_config_net.h  app_config_rcc.c  app_config_rcc.h  app_config_segger.c  app_config_segger.h  app_config_server.c  app_config_server.h  app_config_server_http.c  app_config_server_http.h  app_config_stdio.c  app_config_stdio.h  app_config_uart.c  app_config_uart.h
src_lib/crypto/: ox_hmac.c  ox_hmac.h
src_lib/fwinfo/: ox_fwinfo.c  ox_fwinfo.h
src_lib/net/: ox_net.c  ox_net.h  ox_net_helpers.h  ox_net_hooks.c
src_lib/rng/: ox_rng.c  ox_rng.h
src_lib/segger/: ox_segger_sysview.c  ox_segger_sysview.h
src_lib/server/: ox_server_updater.c
src_lib/server_http/: ox_server_http_dashboard.c  ox_server_http_dashboard.h  ox_server_http_updater.c  ox_server_http_updater.h
src_lib/stdio/: ox_stdio.c  ox_stdio.h
src_lib/trx/: app_config_trx.c  ox_trx.c
